[gd_scene load_steps=28 format=3 uid="uid://dygmdff7w6ism"]

[ext_resource type="Script" path="res://Gacha/GatchaPage.gd" id="1_dkfca"]
[ext_resource type="PackedScene" uid="uid://dkk4ce7nk7mdd" path="res://BG.tscn" id="2_hyun0"]
[ext_resource type="Script" path="res://Gacha/Once.gd" id="4_gy2qh"]
[ext_resource type="Script" path="res://Gacha/TenTimes.gd" id="5_5w7ei"]
[ext_resource type="FontFile" uid="uid://c8kfctqkt4qdk" path="res://png/大部分的字體/04B_30__.TTF" id="5_kmjrm"]
[ext_resource type="Texture2D" uid="uid://dhcfisoiwimpc" path="res://png/player.png" id="6_cmakj"]
[ext_resource type="PackedScene" uid="uid://dx7aucfuwmtbs" path="res://Gacha/CardUnit.tscn" id="6_icvwb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akrvt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rhohn"]
atlas = ExtResource("6_cmakj")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxktb"]
atlas = ExtResource("6_cmakj")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5lr6"]
atlas = ExtResource("6_cmakj")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdse0"]
atlas = ExtResource("6_cmakj")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlmyi"]
atlas = ExtResource("6_cmakj")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbwww"]
atlas = ExtResource("6_cmakj")
region = Rect2(165, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72wwt"]
atlas = ExtResource("6_cmakj")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmjgo"]
atlas = ExtResource("6_cmakj")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tfd3"]
atlas = ExtResource("6_cmakj")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g28e0"]
atlas = ExtResource("6_cmakj")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_718vq"]
atlas = ExtResource("6_cmakj")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyjbx"]
atlas = ExtResource("6_cmakj")
region = Rect2(165, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_886kf"]
atlas = ExtResource("6_cmakj")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4api3"]
atlas = ExtResource("6_cmakj")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaps3"]
atlas = ExtResource("6_cmakj")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5yao"]
atlas = ExtResource("6_cmakj")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67tle"]
atlas = ExtResource("6_cmakj")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i21c0"]
atlas = ExtResource("6_cmakj")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_msgko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhohn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxktb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5lr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdse0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlmyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbwww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72wwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmjgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tfd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g28e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_718vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyjbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_886kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4api3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaps3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5yao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67tle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i21c0")
}],
"loop": false,
"name": &"transition",
"speed": 5.0
}]

[node name="GatchaPage" type="Node2D"]
script = ExtResource("1_dkfca")

[node name="BG" parent="." instance=ExtResource("2_hyun0")]

[node name="CardSample" parent="." instance=ExtResource("6_icvwb")]
offset_top = 90.0
offset_bottom = 440.0

[node name="Timer" type="Timer" parent="CardSample"]
wait_time = 2.0
autostart = true

[node name="Possibility" type="Label" parent="."]
offset_left = 518.0
offset_top = 399.0
offset_right = 618.0
offset_bottom = 439.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Cards" type="Node2D" parent="."]

[node name="Back" type="MarginContainer" parent="."]
offset_left = 1031.0
offset_top = 33.0
offset_right = 1131.0
offset_bottom = 83.0

[node name="BackLabel" type="Label" parent="Back"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_kmjrm")
theme_override_font_sizes/font_size = 30
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="TouchScreenButton" parent="Back"]
position = Vector2(49, 24)
scale = Vector2(6, 4)
shape = SubResource("RectangleShape2D_akrvt")
script = ExtResource("4_gy2qh")

[node name="Continue" type="MarginContainer" parent="."]
offset_left = 1024.0
offset_top = 34.0
offset_right = 1144.0
offset_bottom = 84.0

[node name="ContinueLabel" type="Label" parent="Continue"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_kmjrm")
theme_override_font_sizes/font_size = 18
text = "Continue
"

[node name="Continue" type="TouchScreenButton" parent="Continue"]
position = Vector2(57, 24)
scale = Vector2(6, 4)
shape = SubResource("RectangleShape2D_akrvt")
script = ExtResource("4_gy2qh")

[node name="Transition" type="AnimatedSprite2D" parent="."]
position = Vector2(582, 330)
scale = Vector2(4.5, 3.707)
sprite_frames = SubResource("SpriteFrames_msgko")
animation = &"transition"
autoplay = "transition"

[node name="Once" type="MarginContainer" parent="."]
offset_left = 309.0
offset_top = 435.0
offset_right = 409.0
offset_bottom = 485.0

[node name="OnceLabel" type="Label" parent="Once"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_kmjrm")
theme_override_font_sizes/font_size = 20
text = "抽 1 次"

[node name="Once" type="TouchScreenButton" parent="Once"]
position = Vector2(41, 24)
scale = Vector2(6, 4)
shape = SubResource("RectangleShape2D_akrvt")
script = ExtResource("4_gy2qh")

[node name="TenTimes" type="MarginContainer" parent="."]
offset_left = 750.0
offset_top = 435.0
offset_right = 855.0
offset_bottom = 485.0

[node name="TenTimesLabel" type="Label" parent="TenTimes"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_kmjrm")
theme_override_font_sizes/font_size = 20
text = "抽 10 次"

[node name="TenTimes" type="TouchScreenButton" parent="TenTimes"]
position = Vector2(52, 25)
scale = Vector2(6, 4)
shape = SubResource("RectangleShape2D_akrvt")
script = ExtResource("5_5w7ei")

[connection signal="timeout" from="CardSample/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Back/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Continue/Continue" to="Once/Once" method="_on_continue_pressed"]
[connection signal="pressed" from="Continue/Continue" to="TenTimes/TenTimes" method="_on_continue_pressed"]
[connection signal="animation_finished" from="Transition" to="Once/Once" method="_on_transition_animation_finished"]
[connection signal="animation_finished" from="Transition" to="TenTimes/TenTimes" method="_on_transition_animation_finished"]
[connection signal="pressed" from="Once/Once" to="Once/Once" method="_on_pressed"]
[connection signal="pressed" from="TenTimes/TenTimes" to="TenTimes/TenTimes" method="_on_pressed"]
